cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_326.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/ca.c:1023: error: DEAD_STORE
  The value written to &outdirlen (type unsigned long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/ca.c:1023:9: Write of unused value
1021.           }
1022.   
1023.           outdirlen = OPENSSL_strlcpy(new_cert, outdir, sizeof(new_cert));
                ^
1024.   #ifndef OPENSSL_SYS_VMS
1025.           outdirlen = OPENSSL_strlcat(new_cert, "/", sizeof(new_cert));
